# augmentGallery

./: README.md  pyproject.toml  requirements.txt
analysis/: correlation.py  interaction_analysis.py  plots.py  tsne_umap.py
configs/: base.yaml
configs/augmentations/: aug_001.yaml  aug_002.yaml  aug_003.yaml  aug_004.yaml  aug_005.yaml  aug_006.yaml  aug_007.yaml  aug_008.yaml  aug_009.yaml  aug_010.yaml  aug_011.yaml  aug_012.yaml  aug_013.yaml  aug_014.yaml  aug_015.yaml  aug_016.yaml  aug_017.yaml  aug_018.yaml  aug_019.yaml  aug_020.yaml  aug_021.yaml  aug_022.yaml  aug_023.yaml  aug_024.yaml  aug_025.yaml  aug_026.yaml  aug_027.yaml  aug_028.yaml  aug_029.yaml  aug_030.yaml  aug_031.yaml  aug_032.yaml  aug_033.yaml  aug_034.yaml  aug_035.yaml  aug_036.yaml  aug_037.yaml  aug_038.yaml  aug_039.yaml  aug_040.yaml  (+87 more)
experiments/: run_all.py  run_single.py
notebooks/: colab_control_panel.ipynb
results/: metrics.csv
src/data/: augmentations.py  cifar.py
src/evaluation/: embedding_export.py  linear_probe.py  metrics.py
src/logging/: logger.py  tracker.py
src/models/: byol.py  encoder.py  projector.py
src/training/: loss.py  scheduler.py  train.py
src/utils/: augmentation_grid.py  config.py
